--- a/EloTracker/EloTracker/MainWindow.xaml
+++ b/EloTracker/EloTracker/MainWindow.xaml
@@ -1,12 +1,103 @@
 ﻿<Window x:Class="EloTracker.MainWindow"
+        x:Name="mainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:EloTracker.Views"
         xmlns:local="clr-namespace:EloTracker"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="500" Width="800"
+        DataContext="{Binding Main, Source={StaticResource Locator}}">
+    <Window.Resources>
+        <Style TargetType="Border">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="1"/>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Width" Value="80"/>
+            <Setter Property="Height" Value="50"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <TabControl>
+            <TabItem Header="Leaderboard">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Border>
+                        <!--Player List-->
+                        <DataGrid ItemsSource="{Binding Players}" AutoGenerateColumns="False">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Binding="{Binding Name}" Header="Name" Width="Auto"/>
+                                <DataGridTextColumn Binding="{Binding Score}" Header="Score" Width="Auto"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Border>
+                    <Grid Grid.Column="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Border>
+                            <!--Enter Match-->
+                            <views:AddGameView VM="{Binding AddGameVM}"/>
+                        </Border>
+                        <Border Grid.Row="1">
+                            <views:AddPlayerView VM="{Binding AddPlayerVM}"/>
+                        </Border>
+                    </Grid>
+                </Grid>
+            </TabItem>
+            <TabItem Header="History">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Border>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+
+                            <!--Player DataGrid-->
+                            <DataGrid ItemsSource="{Binding HistoryVM.Players}" 
+                                      AutoGenerateColumns="False"
+                                      SelectedItem="{Binding HistoryVM.SelectedPlayer}">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Binding="{Binding Name}" 
+                                                        Header="Name" Width="Auto"/>
+                                    <DataGridTextColumn Binding="{Binding Score}" 
+                                                        Header="Score" Width="Auto"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+
+                            <Button Grid.Row="1" Grid.Column="1" Content="Total History"
+                                    Command="{Binding HistoryVM.TotalHistoryCommand}"/>
+
+                        </Grid>
+                    </Border>
+                    <Border Grid.Column="1">
+                        <!--Active History-->
+                        <DataGrid ItemsSource="{Binding HistoryVM.ActiveHistory.GameHistory}"
+                                  AutoGenerateColumns="False">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="White" Binding="{Binding White.Name}"/>
+                                <DataGridTextColumn Header="Black" Binding="{Binding Black.Name}"/>
+                                <!--To do: Make a converter for Draw-->
+                                <DataGridTextColumn Header="Winner" Binding="{Binding PlayerWinner.Name}"/>
+                                <DataGridTextColumn Header="Date/Time" Binding="{Binding TimePlayed}"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Border>
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
