--- a/EloTracker/EloTracker/MainWindow.xaml
+++ b/EloTracker/EloTracker/MainWindow.xaml
@@ -36,7 +36,9 @@
                     </Grid.ColumnDefinitions>
                     <Border>
                         <!--Player List-->
-                        <DataGrid ItemsSource="{Binding Players}" AutoGenerateColumns="False">
+                        <DataGrid ItemsSource="{Binding Players}"
+                                  AutoGenerateColumns="False"
+                                  IsReadOnly="True">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Binding="{Binding Name}" Header="Name" Width="Auto"/>
                                 <DataGridTextColumn Binding="{Binding Score}" Header="Score" Width="Auto"/>
@@ -75,7 +77,8 @@
                             <!--Player DataGrid-->
                             <DataGrid ItemsSource="{Binding HistoryVM.Players}" 
                                       AutoGenerateColumns="False"
-                                      SelectedItem="{Binding HistoryVM.SelectedPlayer}">
+                                      SelectedItem="{Binding HistoryVM.SelectedPlayer}"
+                                      IsReadOnly="True">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Binding="{Binding Name}" 
                                                         Header="Name" Width="Auto"/>
@@ -92,7 +95,8 @@
                     <Border Grid.Column="1">
                         <!--Active History-->
                         <DataGrid ItemsSource="{Binding HistoryVM.ActiveHistory.GameHistory}"
-                                  AutoGenerateColumns="False">
+                                  AutoGenerateColumns="False"
+                                  IsReadOnly="True">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="White" Binding="{Binding White.Name}"/>
                                 <DataGridTextColumn Header="Black" Binding="{Binding Black.Name}"/>
@@ -106,16 +110,6 @@
             </TabItem>
         </TabControl>
         <!--Status Bar-->
-        <Grid Grid.Row="1" Margin="5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock Text="Status"/>
-            <TextBlock Text="Version" Grid.Column="2"/>
-            <TextBlock Text="Bug Report" Grid.Column="3"/>
-        </Grid>
+        <views:StatusBar Grid.Row="1" VM="{Binding StatusBarVM}"/>
     </Grid>
 </Window>
