--- a/EloTracker/EloTracker/Views/StatusBar.xaml
+++ b/EloTracker/EloTracker/Views/StatusBar.xaml
@@ -7,7 +7,12 @@
              xmlns:local="clr-namespace:EloTracker.Views"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Margin="5" DataContext="{Binding ElementName=statusBar, Path=VM}">
+    <Grid DataContext="{Binding ElementName=statusBar, Path=VM}">
+        <Grid.Resources>
+            <Style TargetType="TextBlock">
+                <Setter Property="Margin" Value="5"/>
+            </Style>
+        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition/>
